# nexus-kit

./: README.md  pyproject.toml
.ai/: guide.md
.github/workflows/: ci.yml  publish.yml
nexus-kit/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
nexus-kit-fastapi/: CHANGELOG.md  README.md  pyproject.toml
nexus-kit-fastapi/.ai/: guide.md
nexus-kit-fastapi/src/nexus_kit_fastapi/: __init__.py  http_service.py  inject.py
nexus-kit-fastapi/tests/: test_http_service.py  test_inject.py
nexus-kit/.ai/: guide.md
nexus-kit/src/nexus_kit/: __init__.py  cli.py
nexus-kit/src/nexus_kit/impl/: container_injector.py  service_runner.py
nexus-kit/src/nexus_kit/interfaces/: environment.py  service.py
nexus-kit/src/nexus_kit/logging/: __init__.py  log_formatter.py
nexus-kit/tests/: test_cli.py  test_environment.py  test_root.py  test_service_runner.py
src/nexus/: cli.py
src/nexus/logging/: __init__.py  named_logger.py  stdout_handler.py
src/nexus_kit/: cli.py  root.py
src/nexus_kit/impl/: __init__.py  service_runner.py
src/nexus_kit/interfaces/: __init__.py  application.py  container.py
src/nexus_kit/logging/: named_logger.py  stdout_handler.py
tests/: test_cli.py  test_service_runner.py
