[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-kit"
version = "0.4.1"
description = "Application kernel for long-lived Python apps: one entry point, typed config, constructor DI, service lifecycle, PyInstaller-safe paths."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Astislav Bozhevolnov", email = "astislav@gmail.com" }
]
keywords = ["framework", "dependency-injection", "application", "bootstrap", "di"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    "injector>=0.24.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/Astislav/nexus"

[project.scripts]
nexus-kit = "nexus_kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_kit"]
