[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-kit-fastapi"
version = "0.2.5"
description = "FastAPI + uvicorn as a nexus-kit lifecycle service, with a Depends bridge into the nexus container."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Astislav Bozhevolnov", email = "astislav@gmail.com" }
]
keywords = ["nexus-kit", "fastapi", "uvicorn", "dependency-injection", "lifecycle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    # Floor is the kernel whose `sync-ai` mirrors this package's embedded guide
    # correctly (app-venv scan, trust gate) and excludes the yanked 0.4.10; the
    # upper bound keeps a future breaking 0.5 from resolving in unnoticed (0.x
    # minors may break — see the kernel's own semver note).
    "nexus-kit>=0.4.12,<0.5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.uv.sources]
nexus-kit = { workspace = true }  # dev resolves to the sibling dir; the published wheel keeps >=0.4.12,<0.5

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/Astislav/nexus"
Repository = "https://github.com/Astislav/nexus"
Issues = "https://github.com/Astislav/nexus/issues"
Changelog = "https://github.com/Astislav/nexus/blob/master/nexus-kit-fastapi/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_kit_fastapi"]

[tool.hatch.build.targets.wheel.force-include]
# The AI guide ships inside the wheel: `nexus-kit sync-ai` in a consumer app
# discovers installed packages by exactly this embedded file and mirrors it
# into the app's .ai/ directory.
".ai/guide.md" = "nexus_kit_fastapi/.ai/guide.md"
